FEATURE: multiple semantic tabs

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="semantic-tabs">
+    <div class="semantic-tabs">
+        <h3>Title 1</h3>
+        <p>This is the content of 1.</p>
+        <p>This is the content of 1.</p>
+        <p>This is the content of 1.</p>
+        <h3>Title 2</h3>
+        <p>This is the content of 2.</p>
+        <p>This is the content of 2.</p>
+        <p>This is the content of 2.</p>
+        <h3>Title 3</h3>
+        <p>This is the content of 3.</p>
+        <p>This is the content of 3.</p>
+        <p>This is the content of 3.</p>
+    </div>
+    <div class="semantic-tabs">
         <h3>Title 1</h3>
         <p>This is the content of 1.</p>
         <p>This is the content of 1.</p>
